
  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES
  HCAT-554 Loading data using HCatLoader() from a table on non default namenode fails. (amalakar via avandana)

  HCAT-629 First request always fails for webhcat (kamrul via gates)

  HCAT-639 ant test fails on trunk due to checkstyle issues (gates)

  HCAT-640 CHANGES.txt still lists 0.5 as unreleased (gates)

Release 0.5.0 - Released 14 February 2013

  INCOMPATIBLE CHANGES

  NEW FEATURES
  HCAT-546 Rework HCatalog's JMS Notifications (mithunr via gates) 

  HCAT-364 HCatalog pig adapter should handle boolean fields (traviscrawford)

  HCAT-515 Upgrade hadoop23 version to use 0.23.3 (cdrome via toffer)

  HCAT-132 Add HCatalog to Maven Repository (traviscrawford)

  HCAT-375 Make HCat work for Hadoop 0.23 (cdrome via toffer)

  HCAT-469 HiveClientCache may return a closed client (amalakar via toffer)

  HCAT-370 Create a HiveMetaStoreClient cache in hcatalog (amalakar via toffer) 

  HCAT-419 Java APIs for HCatalog DDL commands (avandana via toffer)

  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-604 add flexibility wrt. location of PID/LOG files (rvs via traviscrawford)

  HCAT-602 release notes for hcatalog 0.0.5 (traviscrawford)

  HCAT-595 Update hcatalog hive dependency to 0.10.0 (traviscrawford)

  HCAT-549 rename webhcat config and shell scripts to use webhcat in the names (thejas via gates)

  HCAT-446 Enforce apache headers for all HCatalog code (traviscrawford via gates)

  HCAT-564 test.sh should let users specify the ant version (traviscrawford)

  HCAT-527 InputJobInfo should not be public (traviscrawford)

  HCAT-560 HCatClient should support addition of new columns to a Table.(mithunr via avandana)
