@@ -37,6 +37,8 @@ Trunk (unreleased changes)
 
   HCAT-640 CHANGES.txt still lists 0.5 as unreleased (gates)
 
+  HCAT-625 HCatalog 0.5.0 installation document is outdated (kamrul via gates)
+
 Release 0.5.0 - Released 14 February 2013
 
   INCOMPATIBLE CHANGES
